@@ -1,44 +1,4 @@
-/* $Id: maintenance.css,v 1.6 2006/07/13 13:11:36 dries Exp $ */
-
-body {
-  background: url(druplicon.png) 4.2em 4em no-repeat #fff;
-  color: #000;
-  border: 1px solid #bbb;
-  margin: 3em;
-  padding: 1em 1em 1em 128px;
-  line-height: 1.2;
-}
-h1 {
-  margin: 1.6em 0 1.1em 0;
-}
-h1, h2, h3, h4, h5, h6 {
-  font-family: sans-serif;
-}
-:link {
-  color: #0073ba;
-  font-weight: bold;
-}
-:visited {
-  color: #004975;
-  font-weight: bold;
-}
-
-div.messages {
-  border: 1px solid #ddd;
-  padding: 0.4em;
-  margin-top: 1em;
-}
-
-div.messages li {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-}
-
-div.error {
-  background: #fdd;
-  border: 1px solid #daa;
-  color: #400;
-}
+/* $Id: maintenance.css,v 1.7 2007/03/02 09:40:13 unconed Exp $ */
 
 /* Update styles */
 #update-results {
