@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.181 2007/03/02 09:08:47 unconed Exp $
+// $Id: CHANGELOG.txt,v 1.182 2007/03/02 09:40:13 unconed Exp $
 
 Drupal 6.0, xxxx-xx-xx (development version)
 ----------------------
@@ -6,6 +6,7 @@ Drupal 6.0, xxxx-xx-xx (development version)
 - Made it easier to theme the forum overview page.
 - Drupal works with error reporting set to E_ALL.
 - Added scripts/drupal.sh to execute Drupal code from the command line. Useful to use Drupal as a framework to build command-line tools.
+- Used the Garland theme for the installation and maintenance pages.
 
 Drupal 5.0, 2007-01-15
 ----------------------
